--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,51 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Relay Parent</name>
     <url>http://relayrace.yestech.org</url>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <relayrace.version>1.0.0-SNAPSHOT</relayrace.version>
-    </properties>
+    <description>Provides an Application that is targeted at relay races.</description>    
+    <scm>
+        <connection>scm:git:git@github.com:yestech/yesrelayrace.git</connection>
+        <developerConnection>scm:git:git@github.com:yestech/yesrelayrace.git</developerConnection>
+        <url>git@github.com:yestech/yesrelayrace.git</url>
+    </scm>
+    <organization>
+        <name>YES Technology Association</name>
+        <url>http://yestech.org</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>LGPLv3</name>
+            <url>http://opensource.org/licenses/lgpl-3.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>artie</id>
+            <name>Artie Copeland</name>
+            <email>http://mailhide.recaptcha.net/d?k=013dif-8KmF_OR5-Zs49rn9w==&amp;c=ZDwNN9ZwWomHpMAaLEW0Rt3HB4aATO6AM20eeZNxLS4=</email>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+    <ciManagement>
+        <url>http://ci.yestech.org</url>
+        <system>hudson</system>
+    </ciManagement>
+    <parent>
+        <groupId>org.yestech</groupId>
+        <artifactId>yessuperpom</artifactId>
+        <version>1.3.0</version>
+    </parent>
     <modules>
         <module>core</module>
         <module>android</module>
     </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <relayrace.version>1.0.0-SNAPSHOT</relayrace.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -48,29 +85,4 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>yestech-snapshots</id>
-            <name>YES Technology Snapshot Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/github-snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <distributionManagement>
-        <repository>
-            <id>yestech-releases</id>
-            <name>YES Technology Release Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/github-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>yestech-snapshots</id>
-            <name>YES Technology Snapshot Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/github-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
